# Bone_Adaptation_as_Level_Set_Motion

./: README.md
Curvature/: CMakeLists.txt  README.md  itkCurvatureBasedBoneResorptionFunction.h  itkCurvatureImageFilter.h  itkCurvatureImageFilter.hxx  itkDensePengReinitializeLevelSetFunction.hxx  main.cxx
Figures/: README.md
Initialize/: CMakeLists.txt  README.md  main.cxx
Iteration/: CMakeLists.txt  README.md  itkCurvatureBasedBoneResorptionFunction.hxx  itkCurvatureBasedBoneResorptionImageFilter.h  itkCurvatureBasedBoneResorptionImageFilter.hxx  itkDensePengReinitializeLevelSetFunction.h  itkDensePengReinitializeLevelSetImageFilter.h  itkDensePengReinitializeLevelSetImageFilter.hxx  main.cxx
Python/: README.md  convertAim.py  convertBinaryAim.py  cylinder.py  environment.yaml  hyperbola.py  one_sheet_hyperbola.py  rod.py  torus.py  visualize.py
Python/QuadraticSurfaces/: README.md  create_surfaces.sh  cylinder.py  hyperbola.py  rod.py  torus.py
